...
        android:layout_height="wrap_content"
        tools:context=".AddFragment"
        android:background="@color/white">


        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </FrameLayout>
...
            android:text="* Required"
            android:textColor="#F44336"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prompt" />

        <Spinner
            android:id="@+id/dropdown_mood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Select an emotional state *"
            app:layout_constraintTop_toBottomOf="@id/Required"
            android:background="@drawable/rounded_add_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:theme="@style/SpinnerTextStyle"/>
        <EditText
            android:id="@+id/edit_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="200"
            android:hint="Reason for mood"
            app:layout_constraintTop_toBottomOf="@id/dropdown_mood"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <Spinner
            android:id="@+id/social_situation_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_add_background"
            android:hint="Select social situation *"
            app:layout_constraintTop_toBottomOf="@id/edit_reason"
            app:layout_constraintStart_toStartOf="parent"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/lottiemapclear"
            app:layout_constraintTop_toBottomOf="@+id/uploaded_image"/>

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="165dp"
            android:layout_height="43dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="15dp"
            android:backgroundTint="#FF8E6F"
            android:text="Cancel"
            app:cornerRadius="30dp"
            app:layout_constraintEnd_toStartOf="@id/button_save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/switch_location"
            app:layout_constraintWidth_percent="0.45" />

        <Button
            android:id="@+id/button_save"
...
